--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
 							<p style="text-align: justify;">Hi, my name is Theophilus and I am a <strong>data analyst</strong>. I hold a Bachelors degree in
 								engineering(Mechanical Engineering, University of Zimbabwe).
-								 I am someone who has always been eager to solve problems the tougher the problems the more 
+								 I am someone who has always been eager to solve problems, the tougher the problems the more 
 								 I was drawn to it. I enjoy delving into data to find patterns and to address questions. I 
 								 am also quick to grasp concepts hence I am willing to solve problems in various industries 
 								 be it finance, health, energy or manufacturing.
